# enzyme-product-pred

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Justfile  README.md  pyproject.toml
app/: README.md  __init__.py  registry.py  render.py  streamlit_app.py
data/EnzymeMap/: README.md  prepare.py
data/EnzymeMap_with_seq/: README.md  prepare.py  resolve_accessions.py
data/EnzymeMap_with_seq_plus/: README.md  prepare.py
data/Victorien-CYP-metabolites/: README.md  prepare.py
models/: README.md
models/ESM2-150M-ReactionT5/: README.md  evaluate.py  train.py
models/ESM2-150M-ReactionT5/esm2_150m_reactiont5/: __init__.py  config.py  data.py  esm.py  model.py  pipeline.py
models/ESM2-650M-frozen-ReactionT5/: README.md  evaluate.py  train.py
models/ESM2-650M-frozen-ReactionT5/esm2_reactiont5/: __init__.py  config.py  data.py  embeddings.py  model.py  pipeline.py
src/epp_core/: __init__.py  io.py  runner.py
src/epp_core/chem/: __init__.py  reactions.py  smiles.py  tokenize.py
src/epp_core/data/: __init__.py  build.py  cluster.py  loaders.py  registry.py  schema.py  split.py  uniprot.py
src/epp_core/eval/: __init__.py  base.py  generative.py  types.py
src/epp_core/eval/metrics/: __init__.py  generative.py
src/epp_core/metadata/: __init__.py  capture.py
src/epp_core/plots/: __init__.py  dataset.py  generative.py
src/epp_core/report/: __init__.py  components.py  dataset.py  generator.py
tests/: conftest.py
tests/app/: conftest.py  test_app.py
tests/models/: conftest.py  test_esm2_150m_reactiont5_config.py  test_esm2_150m_reactiont5_data.py  test_esm2_150m_reactiont5_pipeline.py  test_esm2_150m_reactiont5_smoke.py  test_esm2_reactiont5_config.py  test_esm2_reactiont5_data.py  test_esm2_reactiont5_embeddings.py  test_esm2_reactiont5_pipeline.py  test_esm2_reactiont5_smoke.py
tests/unit/: test_cluster.py  test_data_build.py  test_data_cyp_records.py  test_data_resolved_records.py  test_data_split.py  test_dataset_report.py  test_io.py  test_metadata.py  test_metrics_generative.py  test_reactions.py  test_report.py  test_runner.py  test_smiles.py  test_tokenize.py  test_uniprot.py
